--- a/index.html
+++ b/index.html
@@ -1,2 +1,25 @@
-<h1>Jisoo Hyun</h1>
-<p>Educator · Literature · Gayageum</p>
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <title>Joysuehyun | Digital Card</title>
+    <style>
+        body { font-family: 'Apple SD Gothic Neo', sans-serif; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; background: #f0f2f5; }
+        .card { background: white; padding: 40px; border-radius: 20px; box-shadow: 0 10px 25px rgba(0,0,0,0.1); text-align: center; width: 300px; }
+        h1 { margin: 10px 0; color: #333; }
+        p { color: #666; margin-bottom: 20px; }
+        .link-button { display: block; background: #007aff; color: white; padding: 10px; margin: 10px 0; border-radius: 8px; text-decoration: none; transition: 0.3s; }
+        .link-button:hover { background: #0056b3; }
+    </style>
+</head>
+<body>
+    <div class="card">
+        <h1>👋 안녕하세요!</h1>
+        <p>기록하고 성장하는 joysuehyun입니다.</p>
+        <hr>
+        <a href="mailto:이메일주소" class="link-button">이메일 보내기</a>
+        <a href="https://github.com/joysuehyun" class="link-button">GitHub 구경하기</a>
+        <a href="#" class="link-button">인스타그램(준비중)</a>
+    </div>
+</body>
+</html>
