--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>joysuehyun | 가야금 & 교육 포트폴리오</title>
+    <title>현지수(HYUN JISOO) | 가야금 & 교육 포트폴리오</title>
     <style>
         :root {
             --bg-color: #fcfaf5;
@@ -36,7 +36,7 @@
 
 <header>
     <h1>joysuehyun</h1>
-    <p>가야금 연주자이자 교육 콘텐츠 제작자입니다.</p>
+    <p>고등학교 국어교사, 교육 콘텐츠 크리에이터, 가야금 연주자</p>
 </header>
 
 <div class="container">
@@ -44,30 +44,29 @@
         <h2>About Me</h2>
         <p>전통의 소리를 이어가며, 더 쉬운 교육을 위해 자료를 만듭니다. 가야금의 아름다움을 알리고 교육의 가치를 공유합니다.</p>
         <div class="badge-list">
-            <span class="badge">가야금 연주자</span>
-            <span class="badge">문화예술교육사 2급</span>
-            <span class="badge">정교사 자격증</span>
+            <span class="badge">고등학교 국어교사(2015.~현재)</span>
+            <span class="badge"></span>
+            <span class="badge"></span>
         </div>
     </section>
 
     <section id="gayageum">
-        <h2>가야금 연주 영상</h2>
+        <h2>고등 수업</h2>
         <div class="grid">
             <div class="card">
-                <h3>가야금 산조 연주</h3>
-                <p>성금연류 산조를 연주한 영상입니다.</p>
+                <h3>수업 영상</h3>
+                <p>2000~2000의 문학 기출 문제를 분석한 영상입니다.</p>
                 <a href="유튜브링크넣기" target="_blank" class="btn">영상 보기</a>
             </div>
             <div class="card">
-                <h3>창작 곡 연주</h3>
+                <h3>수업 자료</h3>
                 <p>현대적인 감각으로 재해석한 가야금 연주입니다.</p>
-                <a href="유튜브링크넣기" target="_blank" class="btn">영상 보기</a>
-            </div>
+                <a href="구글드라이브링크" target="_blank" class="btn" style="background: #34a853;">Google Drive</a>
         </div>
     </section>
 
     <section id="teaching">
-        <h2>수업 영상 & 교육 자료</h2>
+        <h2>가야금 연주 영상</h2>
         <div class="grid">
             <div class="card">
                 <span style="font-size: 0.8rem; color: var(--point-color); font-weight: bold;">[수업 영상]</span>
