--- a/about.html
+++ b/about.html
@@ -5,3 +5,18 @@
   <a href="writing.html">Writing</a>
   <a href="music.html">Music</a>
 </nav>
+<h1>About</h1>
+
+<p>
+문학을 가르치며 사고의 구조를 설계합니다.
+</p>
+
+<h2>Education</h2>
+<ul>
+  <li>○○대학교 국어교육과</li>
+</ul>
+
+<h2>Certification</h2>
+<ul>
+  <li>중등 정교사 2급 (국어)</li>
+</ul>
