--- a/about.html
+++ b/about.html
@@ -45,6 +45,7 @@
     <h2>경력 및 연구실적</h2>
     <ul>
         <li>제주특별자치도교육청 중등학교 교사(2015.03.~현재)</li>
+        <li>제41회 스승의 날 유공 교원 교육감 표창</li>
         <li>2024년 한국교육과정원 주관 교과용도서 검정(표기·표현) 위원 참여</li>
         <li>제45회 제주학생과학발명품경진대회 학생작품지도논문연구대회 3등급 수상</li>
         <li>2024년 수업혁신사례연구대회 제주예선대회 2등급 수상</li>
@@ -57,6 +58,7 @@
         <li>중등 정교사 1급(국어)</li>
         <li>JLPT 1급</li>
         <li>초경량비행장치 조종자 무인컬티콥터/3종</li>
+        <li>정리수납전문가 1급(민간자격증)</li>
     </ul>
 </div>
 
