--- a/about.html
+++ b/about.html
@@ -46,10 +46,10 @@
     <ul>
         <li>제주특별자치도교육청 중등학교 교사(2015.03.~현재)</li>
         <li>제41회 스승의 날 유공 교원 교육감 표창</li>
-        <li>2024년 한국교육과정원 주관 교과용도서 검정(표기·표현) 위원 참여</li>
-        <li>제45회 제주학생과학발명품경진대회 학생작품지도논문연구대회 3등급 수상</li>
-        <li>2024년 수업혁신사례연구대회 제주예선대회 2등급 수상</li>
-        <li>제2회 한일 고교교사 교류사업 선발 교사</li>
+        <li>2024년 한국교육과정평원 주관 교과용도서 검정(표기·표현) 위원 참여</li>
+        <li>제45회 제주학생과학발명품경진대회 학생작품지도논문연구대회 3등급</li>
+        <li>2024년 수업혁신사례연구대회 제주예선대회 2등급</li>
+        <li>제2회 한일 고교교사 교류사업 한국대표교사 참여</li>
         <li>2025년 EBS 진로 학업 설계 컨설팅 지원단</li>
     </ul>
 
@@ -57,8 +57,10 @@
     <ul>
         <li>중등 정교사 1급(국어)</li>
         <li>JLPT 1급</li>
-        <li>초경량비행장치 조종자 무인컬티콥터/3종</li>
         <li>정리수납전문가 1급(민간자격증)</li>
+        <li>레크리에이션지도 1급(민간자격증)</li>
+        <li>초경량비행장치 조종자 무인헬티콥터/3종</li>
+        <li>비폭력대화(NVC) 1,2 과정 수료</li>
     </ul>
 </div>
 
