--- a/index.html
+++ b/index.html
@@ -73,4 +73,28 @@
         
         <div class="subtitle-area">
             <div class="emoji-line">📖 🎻 🚁 🇯🇵 🧹 🎤</div>
-            <div class="job-title">국어교사 ·
+            <div class="job-title">국어교사 · 교육콘텐츠 크리에이터 · 이것저것 Learner</div>
+        </div>
+
+        <div class="photo-space"></div>
+
+        <p class="intro-text">
+            꽤 많은 날들을 웃으며 보내고 있습니다.<br>
+            다양한 경험으로 삶을 형형색색으로 물들이며,<br>
+            세상의 다채로운 면을 배워가고 있습니다.
+        </p>
+
+        <p class="intro-text">
+            오늘의 나에게 실망해도, 또다시 성찰하며,<br>
+            내일은 조금 더 나은 내가 될 거라고 믿으며 살아갑니다.
+        </p>
+
+        <p class="philosophy-text">
+            나, 그리고 내가 가르치는 아이들이 스스로를 사랑하고,<br>
+            지상의 모든 슬픔의 사각지대도 사랑으로 보살피는 어른이 될 수 있기를 바랍니다.
+        </p>
+    </section>
+</div>
+
+</body>
+</html>
