--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
         </p>
 
         <p class="philosophy-text">
-            나, 그리고 내가 가르치는 아이들이 스스로를 사랑하고,<br>
-            지상의 모든 슬픔의 사각지대도 사랑으로 보살피는 어른이 될 수 있기를 바랍니다.
+            나, 그리고 내가 가르치는 아이들이 스스로를 사랑하고 타인을 존중하며,<br>
+            지상의 모든 슬픔의 사각지대도 애정으로 보살피는 어른이 될 수 있기를 바랍니다.
         </p>
     </section>
 </div>
